--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
+        "millify": "^4.0.0",
         "rc-tooltip": "^5.1.1",
         "react": "^17.0.2",
         "react-datepicker": "^4.7.0",
@@ -30,6 +31,7 @@
         "react-slick": "^0.28.1",
         "react-tooltip": "^4.2.21",
         "react-top-loading-bar": "^2.1.0",
+        "recharts": "^2.1.9",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
