--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-slick": "^0.28.1",
+        "react-spinners": "^0.11.0",
         "react-tooltip": "^4.2.21",
         "react-top-loading-bar": "^2.1.0",
         "recharts": "^2.1.9",
