--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
+        "luxon": "^2.3.1",
         "millify": "^4.0.0",
         "rc-tooltip": "^5.1.1",
         "react": "^17.0.2",
