form controller done for new

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.3.1",
+        "immer": "^9.0.14",
         "lodash": "^4.17.21",
         "luxon": "^2.3.1",
         "millify": "^4.0.0",
+        "nanoid": "^3.3.4",
         "rc-tooltip": "^5.1.1",
         "react": "^17.0.2",
         "react-datepicker": "^4.7.0",
