--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
         "react-top-loading-bar": "^2.1.0",
         "recharts": "^2.1.9",
         "slick-carousel": "^1.8.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "web3": "^1.7.3"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -67,10 +68,20 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.0",
+        "assert": "^2.0.0",
         "autoprefixer": "^10.4.4",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "https-browserify": "^1.0.0",
+        "os-browserify": "^0.3.0",
         "postcss": "^8.4.12",
         "prettier": "^2.6.0",
         "prettier-plugin-tailwindcss": "^0.1.8",
-        "tailwindcss": "^3.0.23"
+        "process": "^0.11.10",
+        "react-app-rewired": "^2.2.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "tailwindcss": "^3.0.23",
+        "url": "^0.11.0"
     }
 }
