--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
         "react-scripts": "5.0.0",
         "react-slick": "^0.28.1",
         "react-spinners": "^0.11.0",
+        "react-time-picker": "^4.5.0",
         "react-tooltip": "^4.2.21",
         "react-top-loading-bar": "^2.1.0",
         "recharts": "^2.1.9",
         "redux-thunk": "^2.4.1",
         "slick-carousel": "^1.8.1",
         "typechain": "^8.0.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "web3": "^1.7.3"
     },
     "scripts": {
         "start": "react-app-rewired start",
@@ -76,15 +78,15 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.0",
-        "autoprefixer": "^10.4.4",
-        "postcss": "^8.4.12",
-        "prettier": "^2.6.0",
-        "prettier-plugin-tailwindcss": "^0.1.8",
         "assert": "^2.0.0",
+        "autoprefixer": "^10.4.4",
         "buffer": "^6.0.3",
         "crypto-browserify": "^3.12.0",
         "https-browserify": "^1.0.0",
         "os-browserify": "^0.3.0",
+        "postcss": "^8.4.12",
+        "prettier": "^2.6.0",
+        "prettier-plugin-tailwindcss": "^0.1.8",
         "process": "^0.11.10",
         "react-app-rewired": "^2.2.1",
         "stream-browserify": "^3.0.0",
