--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
         "slick-carousel": "^1.8.1",
         "typechain": "^8.0.0",
         "web-vitals": "^2.1.4",
-        "web3": "^1.7.3"
+        "web3": "^1.7.3",
+        "@reduxjs/toolkit": "^1.8.1",
+        "immer": "^9.0.14",
+        "nanoid": "^3.3.4"
     },
     "scripts": {
         "start": "react-app-rewired start",
