--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.2.0",
         "react-icons": "^4.3.1",
+        "react-loading-skeleton": "^3.1.0",
         "react-paginate": "^8.1.2",
         "react-redux": "^7.2.8",
         "react-responsive-carousel": "^3.2.23",
