--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.21",
         "luxon": "^2.3.1",
         "millify": "^4.0.0",
+        "nanoid": "^3.3.4",
         "rc-tooltip": "^5.1.1",
         "react": "^17.0.2",
         "react-datepicker": "^4.7.0",
@@ -49,16 +50,12 @@
         "redux-thunk": "^2.4.1",
         "slick-carousel": "^1.8.1",
         "typechain": "^8.0.0",
-        "web-vitals": "^2.1.4",
-        "web3": "^1.7.3",
-        "@reduxjs/toolkit": "^1.8.1",
-        "immer": "^9.0.14",
-        "nanoid": "^3.3.4"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
         "eject": "react-scripts eject",
         "typechain:generate": "yarn run typechain --target=ethers-v5 ./src/assets/abi/**/*.json --out-dir=./src/assets/gen/types"
     },
@@ -82,20 +79,10 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.0",
-        "assert": "^2.0.0",
         "autoprefixer": "^10.4.4",
-        "buffer": "^6.0.3",
-        "crypto-browserify": "^3.12.0",
-        "https-browserify": "^1.0.0",
-        "os-browserify": "^0.3.0",
         "postcss": "^8.4.12",
         "prettier": "^2.6.0",
         "prettier-plugin-tailwindcss": "^0.1.8",
-        "process": "^0.11.10",
-        "react-app-rewired": "^2.2.1",
-        "stream-browserify": "^3.0.0",
-        "stream-http": "^3.2.0",
-        "tailwindcss": "^3.0.23",
-        "url": "^0.11.0"
+        "tailwindcss": "^3.0.23"
     }
 }
