--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-icons": "^4.3.1",
         "react-loading-skeleton": "^3.1.0",
         "react-paginate": "^8.1.2",
+        "react-player": "^2.10.1",
         "react-redux": "^7.2.8",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.2.2",
