--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,26 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
       
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+          
+      - name: Build Project
+        run: |
+          npm install
+          npm run build --if-present
+          
+      - name: List output files
+        run: ls
+          
       - name: sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
           server: ftp.tally-ho.org
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          protocol: ftps
+          protocol: sftp
+          local-dir: build
